# GROOT

./: CMakeLists.txt  Dockerfile  Dockerfile.alma9  Dockerfile.alma9.base  Dockerfile.base  Dockerfile.groot.alma9  Dockerfile.groot.ubuntu24  Dockerfile.grootsoil.alma9  Dockerfile.grootsoil.ubuntu24  Dockerfile.multi  Dockerfile.old  GNUmakefile  GROOT.cc  GROOT.in  README  README.md  build-GROOT.sh  entrypoint-base.sh  entrypoint.sh  go.mac  gps3.mac  gps4.mac  inputFileDetectors.txt  run.mac  video.mac  vis.mac  vistest.mac
include/: CADMesh.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  EventActionMessenger.hh  HistoManager.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorAction0.hh  PrimaryGeneratorAction2.hh  PrimaryGeneratorAction3.hh  PrimaryGeneratorAction4.hh  PrimaryGeneratorAction5.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  SteppingAction.hh  SteppingMessenger.hh
src/: DetectorConstruction.cc  DetectorConstruction.old  DetectorMessenger.cc  EventAction.cc  EventActionMessenger.cc  GammaPhysics.cc  HistoManager.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction0.cc  PrimaryGeneratorAction2.cc  PrimaryGeneratorAction3.bak  PrimaryGeneratorAction3.cc  PrimaryGeneratorAction4.cc  PrimaryGeneratorAction5.bak  PrimaryGeneratorAction5.cc  PrimaryGeneratorAction_TTIK.bak  PrimaryGeneratorMessenger.cc  Run.cc  RunAction.cc  SteppingAction.cc  SteppingMessenger.cc  SteppingVerbose.cc
